# libgphoto2

./: .gitignore  CLAUDE.md  build-android.bat  note
libgphoto2_port/: ltdl.h  ltdl_stub.c  meson.build
